# code_challenge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .~lock.Data Dictionary.xlsx#  Data Dictionary.xlsx  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/: requirements-airflow.txt
airflow/dags/: __init__.py  billups_master_dag.py
config/: settings.py  spark_config.py
dashboard/: app.py  requirements-dashboard.txt
dashboard/components/: charts.py  filters.py  style.py  tables.py
dashboard/pages/: 1_q1_merchants.py  2_q2_state_analysis.py  3_q3_hourly_patterns.py  4_q4_city_correlation.py  5_q5_recommendations.py  __init__.py
databricks/cluster/: cluster_policy.json
databricks/jobs/: q1_job.json
docker/: Dockerfile.airflow  Dockerfile.dashboard  requirements-dashboard.txt  requirements-pipelines-airflow.txt
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  BUSINESS_REPORT.md  Q4_Q5_SILVER_ANOMALIES_REPORT.md  RUNBOOK.md
notebooks/: 01_eda.ipynb  02_scenario_analysis.ipynb  03_validation_results.ipynb
pipelines/: __init__.py  bronze_ingestion.py  factory.py  runner.py  silver_builder.py
scripts/: analyze_duplicate_merchants.py  setup.sh  validate_challenge_results.py  validate_data_dictionary.py
src/: __init__.py
src/application/: __init__.py
src/core/: base.py  exceptions.py  interfaces.py
src/domain/: entities.py  repositories.py  value_objects.py
src/shared/: constants.py  decorators.py  logger.py  typing.py
tests/: conftest.py
tests/fixtures/: sample_merchants.csv  sample_transactions.parquet
(+42 files in other folders)
