[project]
name = "billups-challenge"
version = "0.1.0"
description = "Billups OOH data engineering challenge — medallion pipelines"
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "spark: requires Java 11+ and PySpark",
]

[tool.coverage.run]
branch = false
omit = [
    "src/core/interfaces.py",
    "src/shared/typing.py",
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["venv/", "airflow/"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
